--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ coverage.xml
 # OS
 .DS_Store
 Thumbs.db
+
+# Un-ignore everything vendored from orchestrator (not generated output)
+!third_party/contracts/**
