fix contracts issue

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Thumbs.db
 
 # Un-ignore everything vendored from orchestrator (not generated output)
 !third_party/contracts/**
+third_party/contracts/**/*.py[cod]
