--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,5 @@ Thumbs.db
 
 # Un-ignore everything vendored from orchestrator (not generated output)
 !third_party/contracts/**
+third_party/contracts/**/__pycache__/
 third_party/contracts/**/*.py[cod]
